--- a/1718/dz/DZ05/dz_5.tex
+++ b/1718/dz/DZ05/dz_5.tex
@@ -19,15 +19,15 @@
 
 	\end{itemize}
 
-	Sljedeći se zadaci odnose na skriptu \shell{even\_bash.sh}. To je skripta koja prima jedan cjelobrojni argument, a ispisuje je li on paran ili neparan.
 	\subsection*{Zadatak 2}
+	Sljedeći se zadatak odnosi na skriptu \shell{even\_bash.sh}. To je skripta koja prima jedan cjelobrojni argument, a ispisuje je li on paran ili neparan.
 	\begin{itemize}
 		\item Koristeći ljusku \shell{bash} i tu skriptu, provjerite parnost brojeva 27 i 42. Skriptu pokrenite sekvencom \shell{./}, a ne naredbom \shell{bash}.
 		\item Nakon toga, pokrenite neku ljusku koja nije \shell{bash} (npr. \shell{sh}, koja je dostupna na većini sustava - jednostavno pokretanjem naredbe \shell{sh}). Iz nove ljuske, pokušajte na isti način pokrenuti skriptu. U komentar napišite u čemu je problem.
 	\end{itemize}
 
-	Sljedeći se zadatak odnosi na C program signal\_handler.c.
 	\subsection*{Zadatak 3}
+	Sljedeći se zadatak odnosi na C program signal\_handler.c.
 	\begin{enumerate}
 		\item Signali SIGTERM vs. SIGKILL
 		\begin{itemize}
@@ -43,13 +43,4 @@
 		    \item Istražite što u ljusci radi sekvenca \shell{\$?} i potom u komentaru opišite kako možemo (osim čitanjem ispisane izlazne poruke) iz ljuske utvrditi je li izvođenje programa uspjelo ili ne. Misli se na semantiku izvođenja, u smislu "je li obavljeno što je trebalo biti obavljeno".
 		\end{itemize}
 	\end{enumerate}
-
-	\subsection*{Zadatak 4}
-	Skripta priložena uz treću laboratorijsku vježbu, \shell{lab03-3.sh}, sadrži beskonačnu petlju. Zadaci u nastavku odnose se na nju.
-	\begin{itemize}
-	    \item Pokrenite proces u \textit{foregroundu} te ga zatim pošaljite u pozadinu. Objasnite kako ste to napravili. Kako biste proces poslali u pozadinu odmah pri pokretanju?
-	    \item Aktivnom procesu (status \emph{RUNNING}) pošaljite \shell{SIGSTOP}. Kako ste to napravili? Što se dogodilo s procesom? Može li se signal \shell{SIGSTOP} programski obraditi?
-	    \item Nastavite izvođenje procesa u pozadini. Kako ste to izveli?
-	    \item Ugasite terminal. Objasnite što se dogodilo s procesom. Koji signal mu je poslan? Navedite barem jedan način kako biste pokrenuli proces i osigurali nastavak njegova izvođenja nakon gašenja terminala.
-	\end{itemize}
 \end{document}
